--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<title>{% block title %}Cleats WNR{% endblock %}</title>
+<title>{% block title %}Cleats Leaderboards{% endblock %}</title>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 <link rel='shortcut icon' href='/static/hacsoc.png'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-<div class="container">
-    <div class="navbar navbar-default row">
-        <div class="navbar-header col-md-8 col-md-offset-2">
-            <a class="navbar-brand" href="/">Cleats</a>
+<link rel="shortcut icon" type="image/png" href="/static/Jersey_yellow.png">
+<div class="navbar navbar-default">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <a class="navbar-brand" href="/">Cleats Leaderboards</a>
+            </div>
         </div>
     </div>
 </div>
