--- a/templates/results_box.html
+++ b/templates/results_box.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default">
-            <div class="panel-heading"><img src="{{ flag }}">{{ title }}</div>
+            <div class="panel-heading"><img src="{{ flag }}">{{ _title }}</div>
             <div class="panel-body">
             <table class="table">
             <tr><th>Name</th><th>Points</th>
