update server.py and templates for new data model

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,19 +7,19 @@
     </div>
 </div>
 
-{% with flag="static/Jersey_yellow.png", _results=overall['GC'], _title="GC" %}
+{% with flag="static/Jersey_yellow.png", _results=overall['gc'], _title="GC" %}
     {% include "results_box.html" %}
 {% endwith %}
 
-{% with flag="static/Jersey_polkadot.png", _results=overall['KOM'], _title="KOM" %}
+{% with flag="static/Jersey_polkadot.png", _results=overall['kom'], _title="KOM" %}
     {% include "results_box.html" %}
 {% endwith %}
 
-{% with flag="static/Jersey_polkadot.png", _results=overall['QOM'], _title="QOM" %}
+{% with flag="static/Jersey_polkadot.png", _results=overall['qom'], _title="QOM" %}
     {% include "results_box.html" %}
 {% endwith %}
 
-{% with flag="static/Jersey_green.png", _results=overall['Sprint'], _title="Sprint" %}
+{% with flag="static/Jersey_green.png", _results=overall['sprint'], _title="Sprint" %}
     {% include "results_box.html" %}
 {% endwith %}
 
