--- a/templates/results_box.html
+++ b/templates/results_box.html
@@ -1,15 +1,27 @@
+{% if row != 0 %}
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+{% endif %}
+    {% if row == 2 %}
+    <div class="col-md-12 col-md-offset-1">
+    {% else %}
+    <div class="col-md-6">
+    {% endif %}
         <div class="panel panel-default">
             <div class="panel-heading"><img src="{{ flag }}">{{ _title }}</div>
             <div class="panel-body">
             <table class="table">
-            <tr><th>Name</th><th>Points</th>
+            <tr><th>#</th><th>Name</th><th>Points</th>
             {% for entry in _results %}
-                <tr><td>{{ entry[0] }}</td><td class="col-md-2">{{ entry[1] }}</td></tr>
+                <tr>
+                    <td class="col-md-1">{{ entry[0] }}</td>
+                    <td>{{ entry[1] }}</td>
+                    <td class="col-md-2">{{ entry[2] }}</td>
+                </tr>
             {% endfor %}
             </table>
             </div>
         </div>
     </div>
+{% if row != 1 %}
 </div>
+{% endif %}
