--- a/templates/results_box.html
+++ b/templates/results_box.html
@@ -2,7 +2,7 @@
 <div class="row">
 {% endif %}
     {% if row == 2 %}
-    <div class="col-md-12 col-md-offset-1">
+    <div class="col-md-12">
     {% else %}
     <div class="col-md-6">
     {% endif %}
