--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-<div class="row"><h3 class="col-md-12 text-left">RSWNR Standings</h3></div>
+<div class="row"><h3 class="col-md-12 text-left">{{ event_title }} Standings</h3></div>
 
 {% with flag="/static/Jersey_yellow.png", _results=overall['gc'], _title="GC", row=1%}
     {% include "results_box.html" %}
