fix no-entry glitch

--- a/templates/results_box.html
+++ b/templates/results_box.html
@@ -1,3 +1,4 @@
+{% if _results %}
 {% if row != 0 %}
 <div class="row">
 {% endif %}
@@ -24,4 +25,5 @@
     </div>
 {% if row != 1 %}
 </div>
+{% endif %}
 {% endif %}
