--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,7 @@ a {
     <div class="row">
         <a class="text-muted" href="https://github.com/a-johnston/cleats-racing">Source on GitHub</a>
         <a class="text-muted" href="/reload">Load New Data</a>
+        <a class="text-muted" href="{{ gdoc_link }}">View Datasheet</a>
     </div>
 </footer>
 </body>
