--- a/templates/results_box.html
+++ b/templates/results_box.html
@@ -7,7 +7,10 @@
     <div class="col-md-6">
     {% endif %}
         <div class="panel panel-default">
-            <div class="panel-heading"><img src="{{ flag }}">{{ _title }}</div>
+            <div class="panel-heading">
+                {% if flag %}<img src="{{ flag }}">{% endif %}
+                {{ _title }}
+            </div>
             <div class="panel-body">
             <table class="table">
             <tr><th>#</th><th>Name</th><th>Points</th>
